--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,5 @@
     -> not consistent pxxpmeter thing
 -> ensure that scaling and chaning units will be consistent
     -> sometimes it assumes the rocket is normal sized and then it wil go badly
+-> add collision between rocket and the floor 
+    -> torque, etc.
