--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,11 @@
     -> needed to convert to a game object
         -> floor, gif
 
+-> the amount that the rockek goes down should not depend on the explosion 
+    -> should depende on the velocity that it is falling
+
+-> chaning the origin for means of rotation causes inconsitencies where you have to assume the origin is at the top left corner
+    -> for eample the racket is not properly going into the ground after a crash
 // long term changes
 -> add engines
 -> determine the center of mass and intertia of rocket
