--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,6 @@
--> add collision between rocket and the floor 
-    -> torque, etc.
--> implement suggestions from https://stackoverflow.com/questions/17910297/inheriting-from-transformable-and-drawable-in-sfml
-    -> needed to convert to a game object
-        -> floor, gif
+-> add a camera to render obkects with the rocket at the center
 
--> the amount that the rockek goes down should not depend on the explosion 
-    -> should depende on the velocity that it is falling
 
--> chaning the origin for means of rotation causes inconsitencies where you have to assume the origin is at the top left corner
-    -> for eample the racket is not properly going into the ground after a crash
 // long term changes
 -> add engines
 -> determine the center of mass and intertia of rocket
