--- a/changes.txt
+++ b/changes.txt
@@ -1,67 +1,7 @@
-THIS FILE IS FOR THE TIMES WHEN GPU AND CPU DONT SYNC UP
-LOG ALL CHANGES MADE TO EITHER HERE!!!!
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-CHANGES TO BOTH
-~~~~~~~~~~~~~~
-ResetRocket -> vely to -160 m/s, decreased height to 1000m
-RocketManager -> used angle -360 for both now!
-Manager -> now init_from_random instead from file
-Env -> increased number of rockerts to 300
-
-
-~~~~~~~~~~
-Manager -> for cpu, changed file to 4500
-Main -> changed show to true
-
-
-FOR BOTH
-~~~~~~~~~~
-Env -> Changed to top 1/10 saved, then 1/6
-Env -> Chnaged load rocks to 300
-main -> now folow rocket
-
-
-~~~~~~~~~~~~~~
-CollisionManager -> Decreased limit to 50m/s, 25 deg
-RocketManager (calculating score of rocket): -> now takes into accoout how far rockets are away from x=0m (pos_x_cost)
-Manager -> now loads in iteration 3000
-
-~~~~~~~~~~~~~~~
-RocketManager -> removed penalty for off center
-RocketManager -> added penalty for fuel
-Rockeet -> added attribute reset fuel mass: gives amoutn of fuel upon reset (for making penalty see ratio of howmuch fiel elft)
-
-~~~~~~
-decreased penalty for fuel usage
-increased penalty to 30 m/s & 10 deg
-
-~~~~~~~~~~~~~
-Experimentally removed triple gradients in choosing a dn b for crossover
-
-~~~~~~~~~~~~~
-gpu starts off with 450
-changed to 15m/s & 7 deg
-
-
-~~~~~~~~~~~~~
-try to make it only use one rocket
-
-gpu starts off with 300
-changed to 7 m/s and 3 deg
-
-
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-changed to 3m/s, 2m/s, and 2 deg
-make new folder in saves on gpus that saves best ierations
-
-~~~~~~~~~~~~
-Chanfged both to ster i3300
-changed to 1.2m/s, 0.7m/s, and 1 deg
-
-
-
-~~~~~~~~~~~~~~~~~~
-changed to iter 3300
-changed to 3m/s, 1deg
-changed to 1 rocketcamera follow rocket
+Video paramters: 14 12 8
+300 rockets each iteration
+~~~~~~~~~~~~~~~~
+Iteration: 0-XXX
+35m/s: x & y, 25deg.
+Starts off with random
+Number rockets == 300
