--- a/changes.txt
+++ b/changes.txt
@@ -1,10 +1,20 @@
 ~~~~~~
 After commit 1
 ~~~~~~~~
+Pres1
+
 35 deg, 40m/s
 changsd 160m/s to 130m/s
-changed to init-from-random
 Increased force from air to 3e6 N
 Changed curves for force depending on flap angle (see refimg 7-8)
 changed to 700m
 Removed restriction on fuel
+Increased mutation ct
+
+~~~~~~~~~~~~~~~~~~~~~~
+Pres2
+
+25 deg, 30m/s
+Added back restriction on fuel (100 only)
+Decreaed mutation ct
+Starts from pres1/1650
