--- a/changes.txt
+++ b/changes.txt
@@ -18,3 +18,34 @@ Pres2
 Added back restriction on fuel (100 only)
 Decreaed mutation ct
 Starts from pres1/1650
+
+~~~~~~~~~~~~~~~~~~~~~~~~
+Pres3
+
+15 deg, 20m/s
+fuel restriction now 150
+Starts from pres2/1050
+
+~~~~~~~~~~~~~~~~~~~~~~~~~
+Pres4
+
+7 deg, 10m/s
+fuel restriction now 200
+Starts from pres3/1050
+Increased to 1000m, 130m/s
+
+~~~~~~~~~~~~~~~~~~~~~
+
+Pres5
+
+5 deg, 7 m/s
+start from pres4/300.txt
+Changed start to 357
+
+~~~~~~~~~~~~~~~~~~~~~
+Pres6
+
+3 deg, 4m/s
+start from pres5/1200.txt
+Revert back to start = 0
+Fuel increased to 250
